# Tuba

./: .gitignore  .metadata  AGENTS.md  README.md  pubspec.yaml
.github/workflows/: _version.yml  pr.yml  release.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/tuba/: MainActivity.kt
docs/complexity/: 2026-05-11.md  2026-05-12.md
docs/context/: context_2026-05-11_231505.md  context_2026-05-11_233541.md  context_2026-05-12_000900.md  context_2026-05-12_002240.md  context_2026-05-12_004137.md  context_2026-05-12_012023.md
docs/deadcode/: 2026-05-11.md  2026-05-12.md
docs/security/: 2026-05-11.md  2026-05-12.md
lib/: connection_history.dart  debug_log.dart  discovered_devices.dart  input_forwarder.dart  main.dart
lib/ffi/: bridge.dart  native_lib.dart
lib/screens/: debug_log_screen.dart  home_screen.dart  local_ip_card.dart  viewer_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
native/: CMakeLists.txt
native/include/: rc_api.h
native/src/: android_capture.cpp  android_capture.h  approval_protocol.cpp  approval_protocol.h  capture.h  capture_factory.h  codec.h  dart_port_events.cpp  dart_port_events.h  dxgi_capture.cpp  dxgi_capture.h  frame_buffer.h  h264_encoder.cpp  h264_encoder.h  linux_capture_factory.cpp  nat_transport.h  pipewire_capture.cpp  pipewire_capture.h  rc_api.cpp  rc_runtime.cpp  rc_runtime.h  socket_platform.cpp  socket_platform.h  tcp_transport.cpp  tcp_transport.h  tls_transport.cpp  tls_transport.h  transport.h  udp_discovery.cpp  udp_discovery.h  udp_discovery_responder.cpp  udp_discovery_responder.h  x11_capture.cpp  x11_capture.h
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
